--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-fade-in": "^1.0.0",
+    "react-loading": "^2.0.3",
+    "react-lottie": "^1.2.3",
     "react-router": "^4.3.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "3.3.1"
